# ai-notebooks

./: .gitignore  .kanban  .nojekyll  Makefile  README.html  README.md  _quarto.yml  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  styles.css
.github/workflows/: publish.yml
.jupyterlab-settings/@jupyterlab/codemirror-extension/: plugin.jupyterlab-settings
.jupyterlab-settings/@jupyterlab/completer-extension/: manager.jupyterlab-settings
.jupyterlab-settings/@jupyterlab/filebrowser-extension/: browser.jupyterlab-settings
.jupyterlab-settings/@jupyterlab/fileeditor-extension/: plugin.jupyterlab-settings
archive/cpp/: 01.ipynb  03.ipynb  05.ipynb  index.ipynb  utils.py
archive/cpp/code/: tmp.cpp
assets/: references.bib  styles.css  theme-dark.scss  theme.scss
dlsys/: 01.ipynb  02.ipynb  03.ipynb  README.md
scripts/: diff.py  runpod.sh
site_libs/bootstrap/: bootstrap-4f09db66bd80cc0de6dab1ca9b3528a9.min.css  bootstrap-912f1d293265def05921bca87d5a888d.min.css  bootstrap-ba00ac99bbea9e7b2b28265043683411.min.css  bootstrap-ca4268692db617cde4c458e45f037212.min.css  bootstrap-dark-07eb97f45fb59c36338cb2b6bcb16d29.min.css  bootstrap-dark-5474b5750f8a647cc54883f9d06b0a67.min.css  bootstrap-dark-ed72e498c0450dafe86c3800e99bcb2e.min.css  bootstrap-dark-f79dbffa86626eb872d8c5a00245cbfc.min.css
src/notebooks/: utils.py
topics/cpp/: 01.html  01.ipynb  02.html  02.ipynb  03.html  03.ipynb  04.html  04.ipynb  05.html  05.ipynb  README.md  index.html  utils.py
topics/deep/: 01.html  01.ipynb  02.html  02.ipynb  03.html  03.ipynb  04.html  04.ipynb  index.html  index.ipynb
topics/dlsys/: 01.html  01.ipynb  02.html  02.ipynb  03.html  03.ipynb  04.html  04.ipynb  README.md  index.html  index.ipynb
topics/llm/: index.ipynb
topics/tooling/: index.html  index.ipynb  runpod.html  runpod.ipynb
(+27 files in other folders)
