[project]
name = "ai-notebooks"
version = "0.1.0"
description = "Notes and experiments in machine learning & AI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pip>=25.1.1",
    "torch>=2.7.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]
